// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader component ProgressBar - should be defined and renders correctly (snapshot) 1`] = `
<withUtils()
  customStyles={Object {}}
  message={Object {}}
  progress={0}
  steps={Array []}
>
  <Component
    customStyles={Object {}}
    message={Object {}}
    progress={0}
    steps={Array []}
    utils={
      Object {
        "ErrorMessage": [Function],
        "classNames": [Function],
        "uniqueId": [Function],
      }
    }
  >
    <div
      className="loader"
    >
      <span
        className="loader__status"
      />
      <div
        className="loader__bar"
      >
        <div
          className="loader__progress loader__progress--icon"
          style={
            Object {
              "width": "0%",
            }
          }
        />
      </div>
    </div>
  </Component>
</withUtils()>
`;

exports[`Loader component Spinner - should be defined and renders correctly (snapshot) 1`] = `
<withUtils()
  animation="linear"
  size="small"
>
  <Component
    animation="linear"
    size="small"
    utils={
      Object {
        "ErrorMessage": [Function],
        "classNames": [Function],
        "uniqueId": [Function],
      }
    }
  >
    <div
      className="loader"
    >
      <div
        className=""
      >
        <div
          className="loader__spinner loader__spinner--linear loader__spinner--small"
        />
      </div>
    </div>
  </Component>
</withUtils()>
`;

exports[`Loader component should render Cutom ProgressBar with steps 1`] = `
<withUtils()
  customStyles={Object {}}
  message={
    Object {
      "incomplete": "Loading...",
      "position": "left",
      "status": "10%",
    }
  }
  progress={10}
  steps={
    Array [
      Object {
        "backgroundColor": "orange",
        "final": 99,
        "icon": "priority_high",
        "start": 0,
      },
      Object {
        "backgroundColor": "green",
        "final": 100,
        "icon": "done",
        "start": 99,
      },
    ]
  }
>
  <Component
    customStyles={Object {}}
    message={
      Object {
        "incomplete": "Loading...",
        "position": "left",
        "status": "10%",
      }
    }
    progress={10}
    steps={
      Array [
        Object {
          "backgroundColor": "orange",
          "final": 99,
          "icon": "priority_high",
          "start": 0,
        },
        Object {
          "backgroundColor": "green",
          "final": 100,
          "icon": "done",
          "start": 99,
        },
      ]
    }
    utils={
      Object {
        "ErrorMessage": [Function],
        "classNames": [Function],
        "uniqueId": [Function],
      }
    }
  >
    <div
      className="loader"
    >
      <span
        className="loader__status loader__status--left"
      >
        10%
      </span>
      <div
        className="loader__bar"
      >
        <div
          className="loader__progress loader__progress--icon loader__progress--orange"
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <div
            className="loader__step--default loader__progress--orange"
          >
            <i
              className="material-icons icon"
            >
              priority_high
            </i>
          </div>
        </div>
      </div>
    </div>
  </Component>
</withUtils()>
`;
